--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -8,6 +8,7 @@ plugins:
   - serverless-iam-roles-per-function
   - serverless-plugin-tracing
   - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
 
 provider:
   name: aws
@@ -43,6 +44,20 @@ provider:
             - xray:PutTraceSegments
           Resource: "*"
 
+custom:
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: TODO API
+        description: Serverless application for todo
+    models:
+      - name: CreateTodoRequest
+        contentType: application/json
+        schema: ${file(models/create-todo-model.json)}
+      - name: UpdateTodoRequest
+        contentType: application/json
+        schema: ${file(models/update-todo-model.json)}
 
 functions:
 
@@ -78,6 +93,11 @@ functions:
           cors: true
           authorizer: Auth
           reqValidatorName: MyRequestValidator
+          documentation:
+            summary: Create a new todo
+            description: Create a new todo
+            requestModels:
+              'application/json': CreateTodoRequest
           request:
             schemas:
               application/json: ${file(models/create-todo-model.json)}
@@ -97,6 +117,11 @@ functions:
           path: todos/{todoId}
           authorizer: Auth
           reqValidatorName: MyRequestValidator
+          documentation:
+            summary: Update a new todo
+            description: Update a new todo
+            requestModels:
+              'application/json': UpdateTodoRequest
           cors: true
     iamRoleStatements:
       - Effect: Allow
